--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,20 +1,18 @@
-
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/javascript-node
 {
-	"name": "GraphScope",
+	"name": "GraphScope-Giraph",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "registry.cn-hongkong.aliyuncs.com/graphscope/graphscope-dev:latest",
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
-    "features": {
-        "ghcr.io/devcontainers/features/common-utils:2":{
-            "installZsh": "true",
+	"features": {
+		"ghcr.io/devcontainers/features/common-utils:2": {
+			"installZsh": "true",
 			"configureZshAsDefaultShell": "true",
 			"installOhMyZsh": true,
-            "upgradePackages": "false"
-        }
-    },
+			"upgradePackages": "false"
+		}
+	},
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
@@ -28,20 +26,15 @@
 			]
 		}
 	},
-
 	// Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "graphscope",
-
 	// Use 'postCreateCommand' to run commands before the container is created.
 	"initializeCommand": "sudo docker pull registry.cn-hongkong.aliyuncs.com/graphscope/graphscope-dev:latest",
-
 	// Uncomment this to enable C++ and Rust debugging in containers
 	// "capAdd": ["SYS_PTRACE"],
 	// "securityOpt": ["seccomp=unconfined"],
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [3000],
-
 	// Use 'portsAttributes' to set default properties for specific forwarded ports.
 	// More info: https://containers.dev/implementors/json_reference/#port-attributes
 	// "portsAttributes": {
@@ -50,20 +43,18 @@
 	// 		"onAutoForward": "notify"
 	// 	}
 	// },
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "yarn install"
-
 	// Improve performance
-
 	// Uncomment these to mount a folder to a volume
 	// https://code.visualstudio.com/remote/advancedcontainers/improve-performance#_use-a-targeted-named-volume
-	// "mounts": [
-    // 	"source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"
-	// ],
+	"mounts": [
+		"source=/mnt/zhanglei/dev_mounts,target=/home/graphscope/dev_mounts,type=bind,consistency=cached"
+	],
+	"runArgs": [
+		"--network=host",
+	],
 	// "postCreateCommand": "sudo chown graphscope node_modules"
-
-
 	// Uncomment these to use a named volume for your entire source tree
 	// https://code.visualstudio.com/remote/advancedcontainers/improve-performance#_use-a-named-volume-for-your-entire-source-tree
 	// "workspaceMount": "source=gs,target=/workspaces,type=volume",
