--- a/.github/workflows/gss.yml
+++ b/.github/workflows/gss.yml
@@ -25,6 +25,9 @@ on:
       - 'interactive_engine/**'
       - 'python/graphscope/client/**'
       - 'charts/graphscope-store/**'
+      - 'flex/openapi/openapi_coordinator.yaml'
+      - 'coordinator/gscoordinator/flex/**'
+      - 'python/graphscope/gsctl/**'
       - '.github/workflows/gss.yml'
       - '!interactive_engine/**.md'
       - '!charts/graphscope-store/**.md'
@@ -35,6 +38,7 @@ concurrency:
 
 env:
   GSS_IMAGE: registry.cn-hongkong.aliyuncs.com/graphscope/graphscope-store
+  COORDINATOR_IMAGE: registry.cn-hongkong.aliyuncs.com/graphscope/coordinator
 
 jobs:
   gremlin-test:
@@ -131,6 +135,16 @@ jobs:
         mv artifacts/data-load-tool/target/data-load-tool-0.0.1-SNAPSHOT.jar artifacts/
         docker build -t ${{ env.GSS_IMAGE }}:${SHORT_SHA} \
                 -f .github/workflows/docker/graphscope-store.Dockerfile .
+        # build coordinator image
+        cd ${GITHUB_WORKSPACE}/k8s
+        make coordinator CI=false VERSION=${SHORT_SHA}
+        docker tag graphscope/coordinator:${SHORT_SHA} ${{ env.COORDINATOR_IMAGE }}:${SHORT_SHA}
+
+    - name: Build gsctl Wheel Package
+      run: |
+        cd ${GITHUB_WORKSPACE}/python
+        python3 setup_flex.py bdist_wheel
+        python3 setup_gsctl.py bdist_wheel
 
     - name: Setup SSH
       run: |
@@ -149,6 +163,7 @@ jobs:
                         --cpus='12' --memory='32000mb' --disk-size='40000mb'
 
         minikube image load ${{ env.GSS_IMAGE }}:${SHORT_SHA}
+        minikube image load ${{ env.COORDINATOR_IMAGE }}:${SHORT_SHA}
 
     - uses: dashanji/kubernetes-log-export-action@v5
       env:
@@ -165,8 +180,23 @@ jobs:
 
         # helm deployment and testing
         cd ${GITHUB_WORKSPACE}/charts
-        helm install ci --set image.tag=${SHORT_SHA},distributed.enabled=true,store.replicaCount=2 ./graphscope-store
+        helm install ci --set image.tag=${SHORT_SHA},distributed.enabled=true,store.replicaCount=2,portal.enabled=true,portal.coordinatorImage.tag=${SHORT_SHA} ./graphscope-store
         helm test ci --timeout 5m0s
+
+    - name: Flex api test
+      run: |
+        # get coordinator service endpoint
+        export NODE_IP=$(kubectl get nodes --namespace default -o jsonpath="{.items[0].status.addresses[0].address}")
+        export HTTP_PORT=$(kubectl get --namespace default -o jsonpath="{.spec.ports[0].nodePort}" services ci-graphscope-store-portal)
+        export COORDINATOR_SERVICE_ENDPOINT="http://${NODE_IP}:${HTTP_PORT}"
+        # install gsctl
+        python3 -m pip install ${GITHUB_WORKSPACE}/python/dist/*.whl
+        # test
+        export RUN_ON_MINIKUBE=ON
+        python3 -m pip install --no-cache-dir pytest pytest-xdist
+        python3 -m pytest -d --tx popen//python=python3 \
+                          -s -v \
+                          $(dirname $(python3 -c "import graphscope.gsctl as gsctl; print(gsctl.__file__)"))/tests/test_graphscope_insight.py
 
     - name: Test the helm deployment
       run: |
@@ -236,4 +266,3 @@ jobs:
       with:
         name: k8s-test-logs
         path: ${{ github.workspace }}/helm-installation-logs
-
