--- a/charts/graphscope-store/templates/configmap.yaml
+++ b/charts/graphscope-store/templates/configmap.yaml
@@ -166,3 +166,32 @@ data:
 
     export RUST_BACKTRACE=1
     ${GRAPHSCOPE_HOME}/groot/bin/store_ctl.sh start ${ROLE}  # || sleep infinity
+  portal_setup.sh: |-
+    #!/bin/bash
+
+    while true
+    do
+      if [ -z ${POD_ACCESSIBLE} ]; then
+        export HOST=$(kubectl -n ${NAMESPACE} get pod ${INSTANCE_NAME}-graphscope-store-frontend-0 -o jsonpath="{.status.hostIP}")
+        export GRPC_PORT=$(kubectl -n ${NAMESPACE} get services -o jsonpath="{.spec.ports[0].nodePort}" ${INSTANCE_NAME}-graphscope-store-frontend)
+        export GREMLIN_PORT=$(kubectl -n ${NAMESPACE} get services -o jsonpath="{.spec.ports[1].nodePort}" ${INSTANCE_NAME}-graphscope-store-frontend)
+      else
+        export HOST="${INSTANCE_NAME}-graphscope-store-frontend-0.${INSTANCE_NAME}-graphscope-store-frontend-headless"
+        export GRPC_PORT=${GROOT_GRPC_PORT}
+        export GREMLIN_PORT=${GROOT_GREMLIN_PORT}
+      fi
+      echo "${HOST} ${GRPC_PORT} ${GREMLIN_PORT}"
+      python3 -c 'import base64;import os;from gremlin_python.driver.client import Client;ip=os.getenv("HOST");gremlin_port=os.getenv("GREMLIN_PORT");graph_url=f"ws://{ip}:{gremlin_port}/gremlin";username=os.getenv("GROOT_USERNAME");password=base64.b64decode(os.getenv("GROOT_PASSWORD")).decode("utf-8");client = Client(graph_url, "g", username=username, password=password); ret = client.submit("g.V().limit(1)").all().result(); client.close();' && break
+      sleep 3
+    done
+
+    export CONFIG_FILE=/tmp/coordinator_config.yaml
+    echo "coordinator:" > ${CONFIG_FILE}
+    echo "  http_port: ${SERVICE_PORT}" >> ${CONFIG_FILE}
+    echo "" >> ${CONFIG_FILE}
+    echo "launcher_type: hosts" >> ${CONFIG_FILE}
+    echo "" >> ${CONFIG_FILE}
+    echo "session:" >> ${CONFIG_FILE}
+    echo "  instance_id: demo" >> ${CONFIG_FILE}
+
+    python3 -m gscoordinator --config-file ${CONFIG_FILE}
