Interface for different clients and returned results

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -1,9 +1,10 @@
+query.language=gremlin
 # gremlin server endpoint
-gremlin.endpoint=127.0.0.1:8183
+gremlin.endpoint=127.0.0.1:8182
 # cypher server endpoint
 cypher.endpoint=127.0.0.1:7689
 # query suffix, e.g., .cypher, .gremlin
-query.suffix=cypher
+query.suffix=gremlin
 # the number of threads sending queries
 thread_count=1
 # the number of warmup queries each kind of query
@@ -11,7 +12,7 @@ warmup.every.query=0
 # the number of queries sending by each thread
 operation.count.every.query=1
 # the directory of query templates
-queryDir=./queries/cypher_queries
+queryDir=./queries/gremlin_queries/
 # the director of query parameters
 interactive.parameters.dir=./data/substitution_parameters/
 
