Implement interfaces for Cypher, and some refinement

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -1,8 +1,6 @@
 query.language=gremlin
-# gremlin server endpoint
-gremlin.endpoint=127.0.0.1:8182
-# cypher server endpoint
-cypher.endpoint=127.0.0.1:7689
+# server endpoint
+server.endpoint=127.0.0.1:8182
 # query suffix, e.g., .cypher, .gremlin
 query.suffix=gremlin
 # the number of threads sending queries
