Support comparing expected result

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -13,6 +13,8 @@ operation.count.every.query=1
 queryDir=./queries/gremlin_queries/
 # the director of query parameters
 interactive.parameters.dir=./data/substitution_parameters/
+# the directory of query results
+expected_results.path=./data/expected_results/expected.json
 
 # enable print info
 printQueryNames=true
