--- a/interactive_engine/benchmark/pom.xml
+++ b/interactive_engine/benchmark/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>neo4j-java-driver</artifactId>
             <version>4.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
