--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -1,8 +1,9 @@
+# query language, gremlin or cypher are supported now
 query.language=gremlin
 # server endpoint
 server.endpoint=127.0.0.1:8182
-# query suffix, e.g., .cypher, .gremlin
-query.suffix=gremlin
+# query suffix. By default, if the query language is gremlin, the query suffix is gremlin, and if the query language is cypher, the query suffix is cypher.
+# query.suffix=gremlin
 # the number of threads sending queries
 thread_count=1
 # the number of warmup queries each kind of query
