support to run all queries in a specified path

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -22,7 +22,8 @@ printQueryNames=true
 printQueryStrings=true
 printQueryResults=false
 
-# specify which kind of queries are sent
+# specify which kind of queries are sent, if all_queries.enable is true, the following settings are ignored
+all_queries.enable=true
 # ldbc interactive complex read queries
 ldbc_query_1.enable=false
 ldbc_query_2.enable=false
