refactor(interactive): Refine Interactive SDK documentation (#3978)
The existing documentation lacks guides for users to initiate
interactivity from the beginning, and the wrapper interfaces are not
povided.

- [x] Add getting started (deploy, connect, create graph, bulk loading
and submit query)
- [x] Add documentation for each wrapped sdk method.
- [x] Reuse the documentation for models.
- [x] Give a runnable example for each api.

--- a/.gitignore
+++ b/.gitignore
@@ -52,10 +52,13 @@ docs/source/reference/
 docs/reference/generated/
 docs/reference/networkx/generated/
 docs/_build/
-docs/flex/interactive/development/java
-!docs/flex/interactive/development/java/java_sdk.mod
-docs/flex/interactive/development/python
-!docs/flex/interactive/development/python/python_sdk.mod
+docs/flex/interactive/development/java/*
+!docs/flex/interactive/development/java/*Api.md
+!docs/flex/interactive/development/java/java_sdk.md
+docs/flex/interactive/development/python/*
+!docs/flex/interactive/development/python/*Api.md
+!docs/flex/interactive/development/python/python_sdk.md
+docs/flex/interactive/development/restful_api.html
 
 analytical_engine/build/
 
