--- a/k8s/Makefile
+++ b/k8s/Makefile
@@ -10,8 +10,8 @@ endif
 ARCH := $(shell uname -m)
 
 VERSION ?= latest
-#VINEYARD_VERSION ?= v0.22.0
-VINEYARD_VERSION ?= main
+VINEYARD_VERSION ?= v0.22.0
+#VINEYARD_VERSION ?= main
 # This is the version of builder base image in most cases, except for graphscope-dev
 BUILDER_VERSION ?= $(VINEYARD_VERSION)
 # This is the version of runtime base image
