Add client for kuzu in BenchmarkTool

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -1,9 +1,9 @@
-# query language, gremlin or cypher are supported now
-query.language=gremlin
-# server endpoint
-server.endpoint=127.0.0.1:8182
-# query suffix. By default, if the query language is gremlin, the query suffix is gremlin, and if the query language is cypher, the query suffix is cypher.
-# query.suffix=gremlin
+# client opt, gremlin, cypher or kuzu is supported
+client.opt=kuzu
+# server endpoint. For kuzu, it is the name of graphdb.
+server.endpoint=job_db
+# query suffix. By default, if the client is gremlin, the query suffix is .gremlin, and if the client opt is cypher, the query suffix is cypher.
+query.suffix=cypher
 # the number of threads sending queries
 thread_count=1
 # the number of warmup queries each kind of query
@@ -11,7 +11,7 @@ warmup.every.query=0
 # the number of queries sending by each thread
 operation.count.every.query=1
 # the directory of query templates
-queryDir=./queries/gremlin_queries/
+queryDir=./queries/cypher_queries/job_kuzu
 # the director of query parameters
 interactive.parameters.dir=./data/substitution_parameters/
 # the directory of query results
