--- a/interactive_engine/benchmark/pom.xml
+++ b/interactive_engine/benchmark/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>gson</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.kuzudb</groupId>
+            <artifactId>kuzudb</artifactId>
+            <version>0.4.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/kuzu_java.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
