--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -225,7 +225,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <neo4j.version>4.4.0</neo4j.version>
-    <interactive.sdk.version>0.4-SNAPSHOT</interactive.sdk.version>
+    <interactive.sdk.version>0.4</interactive.sdk.version>
   </properties>
 
   <dependencyManagement>
