--- a/flex/interactive/sdk/java/pom.xml
+++ b/flex/interactive/sdk/java/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>interactive</artifactId>
     <packaging>jar</packaging>
     <name>interactive</name>
-    <version>0.4-SNAPSHOT</version>
+    <version>0.3</version>
     <url>https://github.com/alibaba/GraphScope/tree/main/flex/interactive</url>
     <description>GraphScope Interactive Java SDK</description>
     <organization>
