--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -132,6 +132,13 @@ jobs:
         GLOG_v=10 ./bin/bulk_loader -g ${SCHEMA_FILE} -l ${BULK_LOAD_FILE} -d ${TMP_INTERACTIVE_WORKSPACE}/data/modern_graph/indices/
         cd ${GITHUB_WORKSPACE}/flex/tests/hqps
         bash hqps_admin_test.sh ${TMP_INTERACTIVE_WORKSPACE} ./engine_config_test.yaml ${GS_TEST_DIR}
+    
+    - name: Robustness test 
+      env:
+        INTERACTIVE_WORKSPACE: /tmp/interactive_workspace
+      run: |
+        cd ${GITHUB_WORKSPACE}/flex/tests/hqps
+        bash hqps_robustness_test.sh ${INTERACTIVE_WORKSPACE} ./engine_config_test.yaml
 
     - name: Build and test Interactive Java/Python SDK
       env: 
