--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -225,6 +225,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <neo4j.version>4.4.0</neo4j.version>
+    <interactive.sdk.version>0.4</interactive.sdk.version>
   </properties>
 
   <dependencyManagement>
@@ -661,6 +662,11 @@
         <version>1.37.0</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba.graphscope</groupId>
+        <artifactId>interactive</artifactId>
+        <version>${interactive.sdk.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
