--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,7 @@ flex/interactive/sdk/python/gs_interactive/configuration.py
 flex/interactive/sdk/python/gs_interactive/exceptions.py
 flex/interactive/sdk/python/gs_interactive/rest.py
 !flex/interactive/sdk/python/gs_interactive/client/generated/__init__.py
+!flex/interactive/sdk/python/gs_interactive/models/long_text.py
 
 
 **/.cache/
