--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -203,6 +203,7 @@ add_subdirectory(codegen)
 add_subdirectory(storages)
 add_subdirectory(engines)
 add_subdirectory(bin)
+add_subdirectory(engines/graph_db/runtime)
 if (OPENTELEMETRY_CPP_FOUND)
     add_subdirectory(otel)
 endif()
