feat(interactive): support adhoc query (#4094)
Supports simultaneous parsing and executing queries，without using
codegen.

--- a/flex/engines/graph_db/CMakeLists.txt
+++ b/flex/engines/graph_db/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_subdirectory(runtime)
 file(GLOB_RECURSE GRAPH_DB_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/app/*.cc"
   	                             "${CMAKE_CURRENT_SOURCE_DIR}/database/*.cc")
 
@@ -6,6 +7,7 @@ add_library(flex_graph_db SHARED ${GRAPH_DB_SRC_FILES})
 target_include_directories(flex_graph_db PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
 target_link_libraries(flex_graph_db flex_rt_mutable_graph flex_utils ${GLOG_LIBRARIES} ${LIBGRAPELITE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(flex_graph_db hqps_plan_proto)
+target_link_libraries(flex_graph_db runtime_adhoc)
 install_flex_target(flex_graph_db)
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/database/graph_db.h
@@ -25,6 +27,8 @@ install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/database/graph_db.h
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/app/app_base.h
         DESTINATION include/flex/engines/graph_db/app)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/app/hqps_app.h
+        DESTINATION include/flex/engines/graph_db/app)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/app/adhoc_app.h
         DESTINATION include/flex/engines/graph_db/app)
 
 
