--- a/charts/graphscope-store/templates/portal/statefulset.yaml
+++ b/charts/graphscope-store/templates/portal/statefulset.yaml
@@ -87,8 +87,8 @@ spec:
           env:
             - name: CLUSTER_TYPE
               value: "KUBERNETES"
-            - name: POD_ACCESSIBLE
-              value: {{ .Values.portal.podAccessible | quote }} 
+            - name: POD_NETWORK_PLUGIN_TYPE
+              value: {{ .Values.portal.podNetworkPluginType | quote }}
             - name: VERSION
               value: {{ .Chart.Version | quote }}
             - name: GROOT_USERNAME
