support benchmark for different systems

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -1,7 +1,16 @@
-# client opt, gremlin, cypher or kuzu is supported
-client.opt=kuzu
-# server endpoint. For kuzu, it is the name of graphdb.
-server.endpoint=job_db
+# Provide the configuration for the compared systems, starting from system.1 to system.n. Currently, the supported systems includes GIE and KuzuDb.
+# For each system, either endpoint or dbpath is needed for a compared system, depending on the access method of it.
+# e.g., GIE that supports cypher/gremlin clients, and it is accessed by the endpoint; while for KuzuDb, it is accessed by the dbpath.
+system.1.name = GIE
+system.1.client = cypher
+system.1.endpoint = 127.0.0.1:7687
+system.1.dbpath = 
+system.2.name = KuzuDb
+system.2.client = kuzu
+system.2.endpoint = 
+system.2.dbpath = ./job_db
+
+# Provide the configuration for the benchmarking queries.
 # query suffix. By default, if the client is gremlin, the query suffix is .gremlin, and if the client opt is cypher, the query suffix is cypher.
 query.suffix=cypher
 # the number of threads sending queries
